# kaprekar_sequences

./: .gitignore  README.md  pyproject.toml
src/kaprekar_sequences/: __init__.py  combinatorics.py  graph.py  plotter.py
src/ordered_subtraction/: combinatorics.py  graph.py
