[project]
name = "kaprekar_sequences"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "James Ashford", email = "james.ashford@genomics.com" }]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "pygraphviz>=1.14",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]

[project.scripts]
kaprekar_sequences = "kaprekar_sequences:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
